Adapting to Java 11